[gd_scene load_steps=13 format=2]

[ext_resource path="res://components/IconButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/icons/settings.svg" type="Texture" id=3]
[ext_resource path="res://assets/icons/undeafened.svg" type="Texture" id=4]
[ext_resource path="res://assets/icons/unmuted.svg" type="Texture" id=5]
[ext_resource path="res://components/UserAvatarWithStatus.tscn" type="PackedScene" id=6]
[ext_resource path="res://components/UserTag.tscn" type="PackedScene" id=7]
[ext_resource path="res://components/UserActivity.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/fonts/whitney_sb_18.tres" type="DynamicFont" id=9]
[ext_resource path="res://components/UserArea.gd" type="Script" id=11]
[ext_resource path="res://shaders/GuildIconButton.gdshader" type="Shader" id=12]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.160784, 0.168627, 0.184314, 1 )

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 12 )
shader_param/radius = 0.5

[node name="UserArea" type="PanelContainer"]
margin_top = 542.0
margin_right = 300.0
margin_bottom = 598.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MC" type="MarginContainer" parent="."]
margin_right = 300.0
margin_bottom = 59.0
custom_constants/margin_right = 12
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="HB" type="HBoxContainer" parent="MC"]
margin_left = 8.0
margin_top = 8.0
margin_right = 288.0
margin_bottom = 51.0
custom_constants/separation = 8

[node name="AvatarIcon" parent="MC/HB" instance=ExtResource( 6 )]
material = SubResource( 2 )
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="VB" type="VBoxContainer" parent="MC/HB"]
margin_left = 48.0
margin_right = 158.0
margin_bottom = 43.0
mouse_filter = 0
mouse_default_cursor_shape = 2

[node name="Username" parent="MC/HB/VB" instance=ExtResource( 7 )]
margin_right = 110.0
margin_bottom = 22.0
rect_min_size = Vector2( 110, 0 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
clip_text = true

[node name="Discriminator" parent="MC/HB/VB" instance=ExtResource( 8 )]
margin_top = 26.0
margin_right = 110.0
margin_bottom = 43.0
text = "#6033"

[node name="Buttons" type="HBoxContainer" parent="MC/HB"]
margin_left = 168.0
margin_right = 280.0
margin_bottom = 43.0
size_flags_horizontal = 10
custom_constants/separation = 8

[node name="MuteButton" parent="MC/HB/Buttons" instance=ExtResource( 1 )]
margin_top = 5.0
margin_bottom = 37.0
size_flags_horizontal = 0
size_flags_vertical = 4
icon_texture = ExtResource( 5 )
bg_color_hover = Color( 1, 1, 1, 0.0392157 )
vert_padding = 4

[node name="DeafenButton" parent="MC/HB/Buttons" instance=ExtResource( 1 )]
margin_left = 40.0
margin_top = 5.0
margin_right = 72.0
margin_bottom = 37.0
size_flags_horizontal = 0
size_flags_vertical = 4
icon_texture = ExtResource( 4 )
bg_color_hover = Color( 1, 1, 1, 0.0392157 )
vert_padding = 4

[node name="SettingsButton" parent="MC/HB/Buttons" instance=ExtResource( 1 )]
margin_left = 80.0
margin_top = 5.0
margin_right = 112.0
margin_bottom = 37.0
size_flags_horizontal = 0
size_flags_vertical = 4
icon_texture = ExtResource( 3 )
bg_color_hover = Color( 1, 1, 1, 0.0392157 )
vert_padding = 4
